style.css
@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");

/* Custom Properties  */
:root {
  --bg: hsl(0, 0%, 98%);
  --primary: hsl(0, 0%, 8%);
  --secondary: hsl(0, 0%, 41%);
  /* --ripple: #edd556; */
  --ripple: #4bb1da;

  --ff-primary: "Epilogue", sans-serif;

  --size-300: 0.8rem;
  --size-400: 1rem;
  --size-500: 1.125rem;
  --size-600: 1.5rem;
  --size-700: 1.75rem;
  --size-800: 2rem;

  --fw-500: 500;
  --fw-700: 700;

  --transition-500ms: all 500ms ease;
  --transition: all 0.5s ease;
}
/* Box sizing rules */
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* General Styling  */
body {
  display: grid;
  font-weight: 500;
  margin-inline: auto;
  place-content: center;
  background: var(--bg);
  transition: all 500ms ease;
  font-family: var(--ff-primary);
}

/* Header & Navbar  */
header {
  display: flex;
  padding: 2rem 2rem 1rem;
  align-items: center;
  outline: 2px solid limegreen;
  justify-content: space-between;
}
nav {
  width: 94%;
  display: flex;
  align-items: center;
  padding-inline-start: 1rem;
  /* outline: 2px solid black; */
  justify-content: space-between;
}
.nav-list {
  gap: 1rem;
  width: 25%;
  display: flex;
  list-style: none;
  align-items: center;
  /* outline: 2px solid red; */
  justify-content: space-between;
}
.nav-list li {
  border: none;
  border-radius: 1rem;
  padding: 0.75rem 1rem;
  transition: var(--transition-500ms);
}
.nav-list li a {
  gap: 0.25rem;
  display: flex;
  align-items: center;
  text-decoration: none;
  color: var(--secondary);
  font-weight: var(--fw-500);
  /* background: limegreen; */
  transition: var(--transition-500ms);
}
.nav-list li a:hover {
  color: var(--primary);
}
.nav-btn {
  color: var(--secondary);
  background-color: transparent;
  border: none;
  border-radius: 0.5rem;
  transition: var(--transition-500ms);
  font-size: var(--size-500);
  font-weight: 700;
  padding: 0.5rem 1rem;
  cursor: pointer;
}
.nav-btn[data-border] {
  border: 3px solid var(--secondary);
  border-radius: 0.85rem;
}
.nav-btn:nth-child(1) {
  margin-inline-end: 1rem;
}
.nav-btn:hover {
  color: var(--primary);
  transform: scale(1.05);
  background-color: transparent;
  box-shadow: 0 5px 10px rgba(22, 22, 22, 0.01);
}
.hamburger {
  display: none;
}
@media (max-width: 50em) {
  header {
    padding: 1rem 0 0 1rem;
  }
  nav {
    z-index: 1;
    display: none;
    position: absolute;
    padding-inline: 0;
    right: 0;
    top: 0;
    flex-direction: column;
    align-items: start;
    justify-content: flex-start;
    width: 70%;
    height: 100vh;
    overflow: hidden;
    background-color: var(--bg);
    transition: var(--transition);
  }
  .active {
    display: flex;
    overflow: hidden;
    animation: slide 0.5s ease alternate;
  }
  @keyframes slide {
    0% {
      opacity: 0;
      transform: translateX(270px);
    }
    50% {
      transform: translateX(-5px);
    }
    100% {
      opacity: 1;
      transform: translateX(0px);
    }
  }
  .nav-list {
    flex-direction: column;
    height: 52%;
    /* width: 55%; */
    align-items: flex-start;
    justify-content: end;
  }
  .nav-list li {
    padding: 0rem 1rem;
  }
  .btn-bar {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin-block-start: 2rem;
  }
  .nav-btn:nth-child(1) {
    margin-inline-end: 0rem;
  }
  .hamburger {
    padding: 1rem;
    border: none;
    border-radius: 50%;
    z-index: 1000;
    cursor: pointer;
    overflow: visible;
    display: inline-block;
    transition: all 0.15s linear;
    background-color: transparent;
  }
  .hamburger-box {
    width: 40px;
    height: 24px;
    position: relative;
    display: inline-block;
  }
  .hamburger-inner {
    top: 50%;
    display: block;
    margin-top: -2px;
  }
  .hamburger-inner,
  .hamburger-inner::before,
  .hamburger-inner::after {
    height: 4px;
    width: 40px;
    border-radius: 4px;
    position: absolute;
    transform: all 0.15s ease;
    background-color: var(--primary);
  }
  .hamburger-inner::before,
  .hamburger-inner::after {
    content: "";
    display: block;
  }
  .hamburger-inner::before {
    top: -10px;
  }
  .hamburger-inner::after {
    bottom: -10px;
  }
  .hamburger--spin.is-active {
    border: none;
    border-radius: 50%;
  }
  .hamburger--spin .hamburger-inner {
    transition: all 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  }
  .hamburger--spin .hamburger-inner::before {
    transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
  }
  .hamburger--spin .hamburger-inner::after {
    transition: bottom 0.1s 0.25s ease-in,
      transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  }
  .hamburger--spin.is-active .hamburger-inner {
    transform: rotate(225deg);
    transition-delay: 0.12s;
    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
  }
  .hamburger--spin.is-active .hamburger-inner::before {
    top: 0;
    opacity: 0;
    transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
  }
  .hamburger--spin.is-active .hamburger-inner::after {
    bottom: 0;
    transform: rotate(-90deg);
    transition: bottom 0.1s ease-out,
      transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
  }
}
/* Main Section  */
main {
  width: calc(100% - 2rem);
  margin-inline: auto;
  max-width: 1440px;
}
.main-grid {
  gap: 2rem;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column-reverse;
}
.grid-content {
  width: 100%;
  text-align: center;
}
.grid-content h1 {
  line-height: 1;
  font-size: 2.25rem;
  color: var(--primary);
  font-weight: var(--fw-700);
  transition: var(--transition);
}
.grid-content p {
  opacity: 0.65;
  color: var(--secondary);
  font-size: var(--size-400);
  margin-block: 0.75rem 1.5rem;
}
.btn {
  cursor: pointer;
  color: var(--bg);
  border-radius: 0.6rem;
  margin-block-end: 2rem;
  font-size: var(--size-400);
  border: 3px solid transparent;
  outline: 3px solid transparent;
  padding: 0.5rem 1.5rem 0.35rem;
  background-color: var(--primary);
  transition: var(--transition-500ms);
  box-shadow: 0 5px 10px rgba(22, 22, 22, 0.048);
}

/* For Hover */
@media (hover: hover) {
  .btn:hover {
    color: hsl(0, 0%, 8%);
    transform: translateY(-5px);
    border-color: var(--primary);
    background-color: transparent;
  }
}
.svg-logos {
  gap: 0.5rem;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
}
.svg-logos img:nth-child(1) {
  max-width: 110px;
}
.svg-logos img {
  width: 100%;
  max-width: 85px;
}

/* Media Quires */
@media (min-width: 45em) {
  main {
    width: calc(100% - 4rem);
  }
  .main-grid {
    gap: 2rem;
    flex-direction: row;
    align-items: flex-end;
  }
  .grid-image img {
    width: 100%;
    max-width: 800px;
  }
  .grid-content {
    text-align: left;
  }
  .grid-content h1 {
    font-size: 2.5rem;
  }
  .grid-content p {
    opacity: 1;
    max-width: 45ch;
    margin-block: 2rem 3rem;
    font-size: var(--size-500);
  }
  .btn {
    font-size: 1rem;
    margin-block-end: 3rem;
    padding: 0.5rem 0.75rem 0.35rem;
  }
  .svg-logos {
    gap: 0;
    row-gap: 0.5rem;
    align-self: flex-end;
  }
}

/* Dektop Start  */
@media (min-width: 64em) {
  main {
    width: calc(100% - 10rem);
  }
  .grid-content h1 {
    font-size: 3.5rem;
  }
  .grid-content p {
    margin-block-start: 3rem;
  }
  .btn {
    margin-block-end: 5rem;
    font-size: var(--size-500);
    padding: 0.75rem 1rem 0.5rem;
  }
  .svg-logos {
    justify-content: space-between;
  }
}
@media (min-width: 69em) {
  .svg-logos {
    width: 90%;
  }
}
/* Desktop 1440p */
@media (min-width: 82em) {
  .grid-content h1 {
    font-size: 5rem;
  }
  .svg-logos {
    width: 78%;
  }
}

/* Ripple Effect Here */
.ripple {
  position: relative;
  overflow: hidden;
}
span {
  position: absolute;
  border-radius: 50%;
  pointer-events: none;
  background: var(--ripple);
  transform: translate(-50%, -50%);
  animation: ripples 1.5s ease infinite;
}
@keyframes ripples {
  from {
    opacity: 0.3;
    width: 0px;
    height: 0px;
  }
  to {
    opacity: 0;
    width: 500px;
    height: 500px;
  }
}

